2005-07-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

 	* lily/engraver*cc: use throughout.
	
	* lily/include/translator.icc (ADD_ACKNOWLEDGER): new macro.

	* lily/translator.cc (add_acknowledger): new file. Directly jump
	into an Engraver::acknowledge_xxx () method based on a grobs
	interface-list.

	* lily/include/translator-dispatch-list.hh (class
	Engraver_dispatch_list): new struct., new file.

	* scm/define-context-properties.scm
	(all-internal-translation-properties): remove acceptHashTable,
	acknowledgeHashTable

	* lily/translator-group.cc (mark_smob): idem for acceptHashTable.

	* lily/engraver-group-engraver.cc (Engraver_group_engraver):
	change acknowledgeHashTable to C++ member. 

	* lily/rest-collision.cc (do_shift): use extract_grob_set().

2005-07-22  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/display-lily.scm: new file. Define a `display-lily-music'
	function, that displays the music expression given as an argument,
	using LilyPond notation.

	* scm/define-music-display-methods.scm: new file. Implementation
	of display methods for each music type.

	* ly/music-functions-init.ly (displayLilyMusic): new function for
	displaying music with LilyPond notation.

	* input/regression/display-lily-tests.ly: new regression test file
	for `display-lily-music'.

	* scm/markup.scm: remove obsolete debugging code (for printing
	markups with LilyPond notation).

	* scm/define-music-types.scm (music-name-to-property-table):
	* scm/clef.scm (supported-clefs): export, in order to be accessible
	from the (scm display-lily) module.

2005-07-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.tely (Top): Typo.

2005-07-22  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in, Documentation/texinfo.css,
	  stepmake/bin/text2html.py, buildscripts/mutopia-index.py,
	  Documentation/bibliography/index.html.in,
	  Documentation/bibliography/html-long.bst: revert css-width patch,
	  it does not work with IE6.
