@@ -1,5 +1,11 @@
 2005-07-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tuplet-engraver.cc (start_translation_timestep): only read
+	tupletSpannerDuration if applicable.
+
+	* lily/font-size-engraver.cc (process_music): read fontSize only
+	once per timestep.
+
  	* lily/engraver*cc: use throughout.
 	
 	* lily/include/translator.icc (ADD_ACKNOWLEDGER): new macro.
